--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
   "engines": {
     "node": ">=6.4.0"
   },
-  "optionalDependencies": {
-  },
+  "optionalDependencies": {},
   "devDependencies": {
-    "@types/node": "^10.0.0",
+    "@types/node": "^10.5.2",
     "coveralls": "^2.11.12",
     "doctoc": "^1.2.0",
     "eslint": "^3.17.1",
